[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github_monitor"
version = "2.2"
description = "Tool implementing real-time tracking of Github users activities including profile and repositories changes"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.10"
dependencies = [
  "PyGithub>=2.3.0",
  "requests>=2.0",
  "python-dateutil>=2.8",
  "pytz>=2020.1",
  "tzlocal>=4.0",
  "python-dotenv>=0.19",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["github", "monitoring", "tracking", "real-time", "osint", "pygithub"]

[project.urls]
Homepage = "https://github.com/misiektoja/github_monitor"
Source   = "https://github.com/misiektoja/github_monitor"
Changelog= "https://github.com/misiektoja/github_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
github_monitor = "github_monitor:main"

[tool.setuptools]
py-modules = ["github_monitor"]
include-package-data = true
